# v1-3

./: .coverage  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  APK_BUILD_REPORT.md  AUDIT_FIXES_SUMMARY.md  Argos_Master_33Core_Part_1.ipynb  Argos_Master_Core_Part_1.ipynb  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.windows  FINAL_REPORT.md  LICENSE  METRICS.md  Makefile  QUICKSTART.md  QUICK_START.md  README.md  RELEASE_NOTES_v1.3.md  SECURITY.md  Untitled6.ipynb  argos_startup_log.txt  build_apk.py  build_exe.py  buildozer.spec  check_readiness.py  create_release.sh  db_init.py  deploy.sh  docker-compose.yml  genesis.py  health_check.py  install_windows.bat  main.py  mkdocs.yml  mypy.ini  pyproject.toml  (+9 more)
.buildozer/: state.db
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: argos_evolution_publish.yml  build-apk.yml  build-windows-exe.yml  ci-smoke.yml  ci.yml  dependabot.yml  main_ci.yml  release.yml
999/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfiles_and_compose.md  README.md  backup.sh  backup_to_s3.sh  db_init.py  genesis.py  health_check.py  main.py
999/ai-py/: empathy_test.py  test_crypto.py  test_empathy.py
999/mesh-go/: main.go  main_test.go  p2p.proto
ai-py/: empathy_engine_demo.py
assets/firmware/: gw_02_lora_gw.ino
config/: identity.json  master.key  node_birth  scheduled_tasks.json  smart_systems.json
config/dags/: morning_routine.json
core-rs/: Cargo.toml
core-rs/src/: lib.rs
data/argos_model/: model_meta.json  training_history.jsonl
docs/: examples.md
docs/api/: core.md  p2p-bridge.md  p2p-transport.md  zkp.md
docs/developer-guide/: p2p-transports.md
docs/user-guide/: quickstart.md  usage.md
examples/prompts/: basic_prompts.md
examples/scenarios/: greenhouse_stability.json
modules/: net_scanner.py  stalker.py
scripts/: agenticseek_autoconfig.py
src/: __init__.py  adaptive_drafter.py  admin.py  agent.py  agenticseek_adapter.py  argos_logger.py  argos_model.py  awa_core.py  context_engine.py  context_manager.py  core.py  curiosity.py  dag_agent.py  db_init.py  empathy_engine.py  env_bootstrap.py  event_bus.py  evolution.py  git_ops.py  hardware_guard.py  icon_generator.py  jarvis_engine.py  kernel.py  memory.py  observability.py  pupi_ops.py  pypi_publisher.py  self_healing.py  skill_loader.py  smart_systems.py  task_queue.py  tool_calling.py  vision.py
src/accelerators/: accelerator_manager.py
src/ai/: web_search.py
src/bot_adapters/: __init__.py  base.py  discord_adapter.py  telegram_adapter.py  web_adapter.py
src/connectivity/: __init__.py  air_snitch.py  alert_system.py  android_service.py  bacnet_bridge.py  bluetooth_scanner.py  event_bus.py  gateway_manager.py  home_assistant.py  iot_bridge.py  mesh_network.py  nfc_manager.py  p2p_bridge.py  p2p_transport.py  power_sentry.py  sensor_bridge.py  smarthome_override.py  spatial.py  telegram.py  telegram_advanced.py  telegram_bot.py  telegram_multimodal.py  usb_diagnostics.py  wake_word.py  wearable_bridge.py  wifi_sentinel.py
src/core/: scaler.py
src/factory/: __init__.py  flasher.py  replicator.py
tests/: test_bacnet_bridge.py  test_core_features.py  test_device_discovery.py  test_evolution_gate.py  test_p2p.py  test_search.py
(+152 files in other folders)
