[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-universal-os"
version = "1.3.0"
description = "Argos Universal OS — автономная мультиплатформенная ОС с AI-ядром"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vsevolod", email = "seva1691@mail.ru"},
]
keywords = ["ai", "autonomous", "iot", "p2p", "universal-os"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/sigtrip/v1-3"
Documentation = "https://sigtrip.github.io/v1-3"

# ─── Semantic Release ────────────────────────────────────────────
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version} [skip ci]"
tag_format = "v{version}"
build_command = ""
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
commit_version_number = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "feat", "fix", "perf", "refactor", "build", "chore",
    "ci", "docs", "style", "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]

[tool.semantic_release.changelog]
template_dir = ""
changelog_file = "CHANGELOG.md"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"

# ─── Black ───────────────────────────────────────────────────────
[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'

# ─── isort ───────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["src"]

# ─── flake8 (via pyproject-flake8) ──────────────────────────────
# Note: flake8 reads from setup.cfg / .flake8, but we keep config here for reference
# Real flake8 config → .flake8

# ─── mypy ────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
exclude = ["tests/", "build/", "dist/", "docs/"]

# ─── pytest ──────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-q --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─── coverage ────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/interface/*", "src/skills/*"]

[tool.coverage.report]
show_missing = true
fail_under = 30
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "pass",
]

# ─── bandit ──────────────────────────────────────────────────
[tool.bandit]
exclude_dirs = ["tests", "docs", ".venv", "venv", "build", "dist"]
skips = ["B101", "B601"]  # B101: assert_used, B601: paramiko_calls
